--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "backend": "json-server backend-mock/db.json"
   },
   "dependencies": {
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.4",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
