--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.4",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
+    "js-confetti": "^0.12.0",
     "lucide-react": "^0.428.0",
     "nanoid": "^5.0.7",
     "prop-types": "^15.8.1",
